[package]
name = "decorous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_egui = "0.20"
bevy_flycam = "0.10.1"
bevy_infinite_grid = { git = "https://github.com/PikminGuts92/bevy_infinite_grid", branch = "bevy-0.10" }
rfd = "0.11.3"
dxf = "0.4.0"
delaunator = "1.0.2"